--- a/book-project/src/components/style.css
+++ b/book-project/src/components/style.css
@@ -77,3 +77,34 @@
 .book-description{
     font-size:0.9rem
 }
+
+.Header {
+  background-color: #333; /* Dark background for the header */
+  color: white; /* White text color */
+  padding: 1em; /* Add some space around the content */
+  display: flex; /* Use flexbox for alignment */
+  justify-content: space-between; /* Space out the logo and nav */
+  align-items: center; /* Vertically center the items */
+  position:sticky;
+  top:0;
+}
+
+.nav-ul{
+    list-style:none;
+    margin:0;
+    padding:0;
+    display:flex;
+    gap:2em;
+}
+
+.book-details-container{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
+    border:2px solid black;
+    padding:8px;
+    margin:60px;
+    background-color:#ddd;
+    border-radius: 10px;
+}
